bloodc/src/parser/snapshots/bloodc__parser__tests__edge_less_than_vs_generic.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: If {
                                    condition: Expr {
                                        kind: Binary {
                                            op: Lt,
                                            left: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 2,
                                                                    },
                                                                    span: Span {
                                                                        start: 12,
                                                                        end: 13,
                                                                        start_line: 1,
                                                                        start_col: 13,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 12,
                                                            end: 13,
                                                            start_line: 1,
                                                            start_col: 13,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 12,
                                                    end: 13,
                                                    start_line: 1,
                                                    start_col: 13,
                                                },
                                            },
                                            right: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 16,
                                                                        end: 17,
                                                                        start_line: 1,
                                                                        start_col: 17,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 16,
                                                            end: 17,
                                                            start_line: 1,
                                                            start_col: 17,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 16,
                                                    end: 17,
                                                    start_line: 1,
                                                    start_col: 17,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 12,
                                            end: 17,
                                            start_line: 1,
                                            start_col: 13,
                                        },
                                    },
                                    then_branch: Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 1,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 20,
                                                            end: 21,
                                                            start_line: 1,
                                                            start_col: 21,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 20,
                                                    end: 21,
                                                    start_line: 1,
                                                    start_col: 21,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 18,
                                            end: 23,
                                            start_line: 1,
                                            start_col: 19,
                                        },
                                    },
                                    else_branch: Some(
                                        Block(
                                            Block {
                                                statements: [],
                                                expr: Some(
                                                    Expr {
                                                        kind: Literal(
                                                            Literal {
                                                                kind: Int {
                                                                    value: 2,
                                                                    suffix: None,
                                                                },
                                                                span: Span {
                                                                    start: 31,
                                                                    end: 32,
                                                                    start_line: 1,
                                                                    start_col: 32,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 31,
                                                            end: 32,
                                                            start_line: 1,
                                                            start_col: 32,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 29,
                                                    end: 34,
                                                    start_line: 1,
                                                    start_col: 30,
                                                },
                                            },
                                        ),
                                    ),
                                },
                                span: Span {
                                    start: 9,
                                    end: 34,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 36,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 36,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 36,
        start_line: 1,
        start_col: 1,
    },
}
