bloodc/src/parser/snapshots/bloodc__parser__tests__edge_operator_at_line_start.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 4,
                        end: 5,
                        start_line: 2,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [
                            Let {
                                pattern: Pattern {
                                    kind: Ident {
                                        by_ref: false,
                                        mutable: false,
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 18,
                                                end: 19,
                                                start_line: 3,
                                                start_col: 9,
                                            },
                                        },
                                        subpattern: None,
                                    },
                                    span: Span {
                                        start: 18,
                                        end: 19,
                                        start_line: 3,
                                        start_col: 9,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: Binary {
                                            op: Add,
                                            left: Expr {
                                                kind: Binary {
                                                    op: Add,
                                                    left: Expr {
                                                        kind: Literal(
                                                            Literal {
                                                                kind: Int {
                                                                    value: 1,
                                                                    suffix: None,
                                                                },
                                                                span: Span {
                                                                    start: 22,
                                                                    end: 23,
                                                                    start_line: 3,
                                                                    start_col: 13,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 22,
                                                            end: 23,
                                                            start_line: 3,
                                                            start_col: 13,
                                                        },
                                                    },
                                                    right: Expr {
                                                        kind: Literal(
                                                            Literal {
                                                                kind: Int {
                                                                    value: 2,
                                                                    suffix: None,
                                                                },
                                                                span: Span {
                                                                    start: 34,
                                                                    end: 35,
                                                                    start_line: 4,
                                                                    start_col: 11,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 34,
                                                            end: 35,
                                                            start_line: 4,
                                                            start_col: 11,
                                                        },
                                                    },
                                                },
                                                span: Span {
                                                    start: 22,
                                                    end: 35,
                                                    start_line: 3,
                                                    start_col: 13,
                                                },
                                            },
                                            right: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 3,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 46,
                                                            end: 47,
                                                            start_line: 5,
                                                            start_col: 11,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 46,
                                                    end: 47,
                                                    start_line: 5,
                                                    start_col: 11,
                                                },
                                            },
                                        },
                                        span: Span {
                                            start: 22,
                                            end: 47,
                                            start_line: 3,
                                            start_col: 13,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 14,
                                    end: 48,
                                    start_line: 3,
                                    start_col: 5,
                                },
                            },
                        ],
                        expr: None,
                        span: Span {
                            start: 8,
                            end: 50,
                            start_line: 2,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 1,
                    end: 50,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 50,
        start_line: 2,
        start_col: 1,
    },
}
